fix: refactor to blocktranslate tag

--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -20,17 +20,9 @@
                 <h1 class="toc-title">{% translate "Last edited" %}</h1>
                 {% get_current_timezone as TIMEZONE %}
                 <time id="last-published" datetime="{{ page.last_published_at|date:"c" }}" title="{{ TIMEZONE }}">
-                    <span id="last-published-date">
-                        {{ page.last_published_at|date:"SHORT_DATE_FORMAT" }}
-                    </span>
-                    {% translate "at" %}
-                    <span id="last-published-time">
-                        {{ page.last_published_at|time:"TIME_FORMAT" }}
-                    </span>
-                {% get_current_language as LANGUAGE_CODE %}
-                {% if LANGUAGE_CODE != "en" %}
-                    {% translate "Uhr" %}
-                {% endif %}
+                    {% blocktranslate with date=page.last_published_at|date:"SHORT_DATE_FORMAT" time=page.last_published_at|time:"TIME_FORMAT" trimmed %}
+                        {{ date }} at {{ time }}
+                    {% endblocktranslate %}
                 </time>
                 {% if page.author_visible %}
                     {% translate "by" %}
