--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -17,7 +17,7 @@
     <div class="col-lg-3">
         <div class="side-panel-container">
             <aside class="side-panel border-accent">
-                <h1 class="toc-title">{% translate "Last edited" %}</h1>
+                <h1 class="side-panel-title">{% translate "Last edited" %}</h1>
                 {% if not page.last_published_at %}
                     {% translate "A long time ago" %}
                 {% else %}
