--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -155,6 +155,17 @@ h1.side-panel-title::after {
     height: 0px;
 }
 
+.side-panel-warning {
+    background-color: #ff000011;
+    border: 2px solid red;
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1.05rem;
+    line-height: 1.1;
+    font-weight: 600;
+}
+
 .toc-container ul {
     list-style: none;
     padding: 0;
