--- a/myhpi/core/templates/core/sidebar.html
+++ b/myhpi/core/templates/core/sidebar.html
@@ -1,6 +1,11 @@
 {% load core_extras %}
 {% load i18n %}
 
+{% if not page.live %}
+<aside class="side-panel border-accent toc-container d-print-none">
+    <h1 class="side-panel-warning">{% translate "⚠️ Preview ⚠️" %}</h1>
+</aside>
+{% endif %}
 {% if perms.wagtail.edit_page %}
     <aside class="side-panel border-accent toc-container d-print-none">
         <h1 class="side-panel-title">{% translate "Visibility" %}</h1>
