--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load core_extras %}
 {% load i18n %}
+{% load tz %}
 
 {% block content %}
 {% with page.body|markdown as parsed_md %}
@@ -17,9 +18,14 @@
         <div class="side-panel-container">
             <aside class="side-panel border-accent">
                 <h1 class="toc-title">{% translate "Last edited" %}</h1>
-                {{ page.last_published_at|date:"d.m.Y, H:i" }}
+                {% get_current_timezone as TIMEZONE %}
+                <time id="last-published" datetime="{{ page.last_published_at|date:"c" }}" title="{{ TIMEZONE }}">
+                    {% blocktranslate with date=page.last_published_at|date:"SHORT_DATE_FORMAT" time=page.last_published_at|time:"TIME_FORMAT" trimmed %}
+                        {{ date }} at {{ time }}
+                    {% endblocktranslate %}
+                </time>
                 {% if page.author_visible %}
-                    <i>{% translate "by" %}</i>
+                    {% translate "by" %}
                     {{ page.last_edited_by }}
                 {% endif %}
             </aside>
