--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -36,6 +36,10 @@
             {% else %}
                 <i>{% translate "No guests" %}</i>
             {% endif %}
+            {% if page.location %}
+            <h4>{% translate "Location" %}</h4>
+            <p>{{ page.location }}</p>
+            {% endif %}
             <h4>{% translate "Labels" %}</h4>
                 {%  if page.labels.all %}
                     <p>
