--- a/myhpi/polls/templates/polls/majority_vote_poll.html
+++ b/myhpi/polls/templates/polls/majority_vote_poll.html
@@ -1,55 +1,34 @@
-{% extends "base.html" %}
+{% extends "polls/base_poll.html" %}
 {% load core_extras %}
 {% load i18n %}
 
-{% block content %}
-    <div class="row">
-        {% with page.description|markdown as parsed_md %}
-        <div class="col-9">
-            <h1> {{ page.title }} </h1>
-            {{ parsed_md.0 }}
-            <h2> {{ page.question }} </h2>
-            {% if can_vote %}
-                <form method="post">
-                    {% csrf_token %}
-                    {% for choice in page.choices.all %}
-                        <input type={% if page.max_allowed_answers > 1 %} "checkbox" {% else %} "radio" {% endif %} name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-                        <label for="choice{{ forloop.counter }}">{{ choice.text }}</label><br />
-                    {% endfor %}
-                    <input type="submit" value="Vote" />
-                </form>
-            {% elif page.results_visible %}
-                <table class="table table-striped">
-                    <tr>
-                        <th class="col-sm-3">{% trans "Choice" %}</th>
-                        {% if has_choice_descriptions %}<th class="col-sm-5">{% trans "Description" %}</th>{% endif %}
-                        <th class="col-sm-1 text-right">{% trans "Votes" %}</th>
-                        <th class="col-sm-1 text-right">{% trans "Percentage" %}</th>
-                    </tr>
-                    {% for choice in page.choices.all %}
-                        <tr class="choice-row">
-                            <td>{{ choice.text }}</td>
-                            <td class="text-right">{{ choice.votes }}</td>
-                            <td class="text-right">{{ choice.percentage }}%</td>
-                        </tr>
-                    {% endfor %}
-                </table>
-            {% else %}
-                <p> {% translate "You have already voted and the results are not yet visible." %} </p>
-            {% endif %}
-        </div>
-        <div class="col-3">
-            <h4>{% translate "Start Date" %}</h4>
-            <p>{{ page.start_date }}</p>
-            <h4>{% translate "End Date" %}</h4>
-            <p>{{ page.end_date }}</p>
-            <h4>{% translate "Number of participants" %}</h4>
-            <p>{{ page.participants.count }}</p>
-            <h4>{% translate "Number of votes" %}</h4>
-            <p>{{ page.num_votes }}</p>
-            <h4>{% translate "Table of contents" %}</h4>
-            {{ parsed_md.1 }}
-        </div>
-        {% endwith %}
-    </div>
+{% block ballot %}
+    <form method="post">
+        {% csrf_token %}
+        {% for choice in page.choices.all %}
+            <input type={% if page.max_allowed_answers > 1 %} "checkbox" {% else %} "radio"
+            {% endif %} name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
+            <label for="choice{{ forloop.counter }}">{{ choice.text }}</label><br/>
+        {% endfor %}
+        <input type="submit" value="Vote"/>
+    </form>
+{% endblock %}
+
+{% block results %}
+    <table class="table table-striped">
+        <tr>
+            <th class="col-sm-3">{% trans "Choice" %}</th>
+            {% if has_choice_descriptions %}
+                <th class="col-sm-5">{% trans "Description" %}</th>{% endif %}
+            <th class="col-sm-1 text-right">{% trans "Votes" %}</th>
+            <th class="col-sm-1 text-right">{% trans "Percentage" %}</th>
+        </tr>
+        {% for choice in page.choices.all %}
+            <tr class="choice-row">
+                <td>{{ choice.text }}</td>
+                <td class="text-right">{{ choice.votes }}</td>
+                <td class="text-right">{{ choice.percentage }}%</td>
+            </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
