--- a/myhpi/polls/templates/polls/base_poll.html
+++ b/myhpi/polls/templates/polls/base_poll.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load polls %}
 {% load core_extras %}
 {% load i18n %}
 
@@ -9,7 +10,7 @@
             <h1> {{ page.title }} </h1>
             {{ parsed_md.0 }}
             <h2> {{ page.question }} </h2>
-            {% if can_vote %}
+            {% if page|can_vote:request.user %}
                 {% block ballot %}
                 {% endblock %}
             {% elif page.results_visible %}
