--- a/myhpi/polls/templates/polls/poll_list.html
+++ b/myhpi/polls/templates/polls/poll_list.html
@@ -1,11 +1,22 @@
 {% extends "base.html" %}
+{% load i18n %}
 {% load wagtailcore_tags %}
 
 {% block content %}
-<h1>{{ page.title }}</h1>
-<ul>
-    {% for poll in poll_list %}
-        <li><a href="{% pageurl poll %}">{{ poll.title }}</a></li>
-    {% endfor %}
-</ul>
+    <h1>{{ page.title }}</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>{% translate "Title" %}</th>
+                <th>{% translate "Voting period" %}</th>
+            </tr>
+        <tbody>
+        {% for poll in poll_list %}
+            <tr>
+                <td><a href="{% pageurl poll %}">{{ poll.title }}</a></td>
+                <td>{{ poll.start_date }} - {{ poll.end_date }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
