Also show external links in page content

--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -12,7 +12,7 @@
                 {{ page.title }}
             </span>
         </h1>
-        {{ parsed_md.0 }}
+        {{ parsed_md.0|tag_external_links }}
     </div>
     <div class="col-lg-3">
         <div class="side-panel-container">
