feat: add date next to search result headlines
Shows the localized date on the right for search results.

--- a/myhpi/search/templates/search/search_result.html
+++ b/myhpi/search/templates/search/search_result.html
@@ -3,7 +3,12 @@
 
 <a href="{% pageurl result %}">
     <div class="search-result">
-        <h5>{{ result.title }}</h5>
+        <hgroup>
+            <h5>{{ result.title }}</h5>
+            <time datetime="{{ result.first_published_at|date:"c" }}">
+                {{ result.first_published_at|date:"SHORT_DATE_FORMAT" }}
+            </time>
+        </hgroup>
         <span class="text-dark">
             {% if result.search_description %}
                 {{ result.search_description }}
