--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -181,6 +181,15 @@ h1.side-panel-title::after {
     margin: -0.5rem -0.8rem;
 
     .search-result {
+        hgroup {
+          display: flex;
+          justify-content: space-between;
+
+          h5 {
+            hyphens: auto;
+          }
+        }
+
         transition: all 0.25s;
 
         padding: 0.5rem 0.8rem;
