--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -126,7 +126,7 @@
         </div>
     </nav>
 
-    <div id="page" class="container-lg page bg-white">
+    <div id="page" class="container-lg page bg-white pb-3">
         <div class="page-content">
             <div id="messages">
                 {% for message in messages %}
