--- a/myhpi/core/templates/core/information_page.html
+++ b/myhpi/core/templates/core/information_page.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap_icons %}
 {% load core_extras %}
 {% load bootstrap_icons %}
 {% load i18n %}
@@ -6,12 +7,13 @@
 {% block content %}
 {% with page.body|markdown as parsed_md %}
 <div class="row flex-lg-row">
-    <a id="side-panel-toggle" href="#toc" class="d-grid d-lg-none">
-        <button type="button" class="btn btn-light mb-3" aria-label="Jump to Table of Contents">
+    <div id="side-panel-toggle" class="d-grid d-lg-none">
+        <button type="button" data-bs-toggle="offcanvas" data-bs-target="#side-panel-offcanvas"
+            aria-controls="side-panel-offcanvas" class="btn btn-light mb-3" aria-label="Open Table of Contents">
             {% bs_icon 'list-ol' size='1.3rem' %}
             Table of Contents
         </button>
-    </a>
+    </div>
 
     <div class="col-lg-9">
         <h1 class="page-title">
@@ -22,36 +24,56 @@
         {{ parsed_md.0 }}
     </div>
 
-    <div class="col-lg-3">
-        <div class="side-panel-container">
-            <aside class="side-panel border-accent">
-                <h1 class="toc-title">{% translate "Last edited" %}</h1>
-                {{ page.last_published_at|date:"d.m.Y, H:i" }}
-                {% if page.author_visible %}
-                <i>by</i>
-                {{ page.last_edited_by }}
+    <!-- <div class="offcanvas offcanvas-bottom" tabindex="-1" id="side-panel-offcanvas"
+        aria-labelledby="side-panel-offcanvas-label">
+        <div class="offcanvas-header">
+            <h2 class="offcanvas-title" id="side-panel-offcanvas-label">{% translate "Details" %}</h2>
+            <button type="button" class="btn-close" data-bs-dismiss="side-panel-offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body small">
+            <h1 class="toc-title">{% translate "Table of contents" %}</h1>
+            {{ parsed_md.1 }}
+        </div>
+    </div> -->
+
+    <div class="col-lg-3 offcanvas-lg offcanvas-bottom" tabindex="-1" id="side-panel-offcanvas"
+        aria-labelledby="side-panel-offcanvas-label">
+        <div class="offcanvas-header">
+            <h2 class="offcanvas-title" id="side-panel-offcanvas-label">{% translate "Details" %}</h2>
+            <button type="button" class="btn-close" data-bs-dismiss="side-panel-offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <div class="side-panel-container">
+                <aside class="side-panel border-accent">
+                    <h1 class="toc-title">{% translate "Last edited" %}</h1>
+                    {{ page.last_published_at|date:"d.m.Y, H:i" }}
+                    {% if page.author_visible %}
+                    <i>by</i>
+                    {{ page.last_edited_by }}
+                    {% endif %}
+                </aside>
+
+                <aside class="side-panel border-accent toc-container d-print-none">
+                    <h1 class="toc-title">{% translate "Table of contents" %}</h1>
+                    {{ parsed_md.1 }}
+                </aside>
+
+                {% if page.attachments.all %}
+                <aside id="toc" class="side-panel border-accent toc-container d-print-none">
+                    <h1 class="toc-title">{% translate "Attachments" %}</h1>
+                    <ul>
+                        {% for attachment in page.attachments.all %}
+                        <li>
+                            <a href="{{ attachment.url }}">{{ attachment.title }}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </aside>
                 {% endif %}
-            </aside>
-
-            <aside class="side-panel border-accent toc-container d-print-none">
-                <h1 class="toc-title">{% translate "Table of contents" %}</h1>
-                {{ parsed_md.1 }}
-            </aside>
-
-            {% if page.attachments.all %}
-            <aside class="side-panel border-accent toc-container d-print-none">
-                <h1 class="toc-title">{% translate "Attachments" %}</h1>
-                <ul>
-                    {% for attachment in page.attachments.all %}
-                    <li>
-                        <a href="{{ attachment.url }}">{{ attachment.title }}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
-            </aside>
-            {% endif %}
+            </div>
         </div>
     </div>
+
 </div>
 {% endwith %}
 {% endblock %}
