feat: improve TOC heading spacing
Remove spacing between lines of the same multi-line heading and add
spacing to the next.

--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -171,6 +171,12 @@ h1.side-panel-title::after {
     padding: 0;
 }
 
+.toc-container ul li a {
+    display: block;
+    line-height: 100%;
+    padding-bottom: 0.3rem;
+}
+
 .toc-container ul li>ul {
     margin-left: 0.5rem;
 }
