--- a/myhpi/feed/templates/feed/feed.html
+++ b/myhpi/feed/templates/feed/feed.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <p>{{ post.snippet }}</p>
+                <p>{{ post.snippet | safe }}</p>
                 <a href="{{ post.get_url }}">{% trans  "Read more" %}</a>
             </div>
         </div>
