--- a/myhpi/feed/templates/feed/feed.html
+++ b/myhpi/feed/templates/feed/feed.html
@@ -10,7 +10,9 @@
                 <h2>{{ post.title }}</h2>
                 <div class="row justify-content-between">
                     <div class="col-8">
-                        <p class="lead">{% trans "by" %} {{ post.author }}</p>
+                        {% if post.author %}
+                            <p class="lead">{% trans "by" %} {{ post.author }}</p>
+                        {% endif %}
                     </div>
                     <div class="col-4">
                         <div class="d-flex justify-content-end text-muted"> <span>{{ post.date }}</span></div>
