--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -68,6 +68,11 @@ $colors: map-merge($colors, $custom-colors);
     --myhpi-round-border: 2px;
 }
 
+h1, h2, h3, h4, h5, h6, .toc a {
+    word-break: normal;
+    overflow-wrap: break-word;
+}
+
 a {
     text-decoration: none;
 }
