feat: Add permanent link to headings

--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -186,6 +186,10 @@ h1.side-panel-title::after {
     margin-left: 0.5rem;
 }
 
+.toc-permalink {
+    font-size: 0.85em;
+}
+
 .search-result-list {
     list-style: none;
     padding: 0;
