--- a/myhpi/feed/templates/feed/news_feed.html
+++ b/myhpi/feed/templates/feed/news_feed.html
@@ -6,18 +6,8 @@
     <div>
     {% for post in posts %}
         <div class="card mb-2">
-            <div class="card-header">
-                <h2>{{ post.title }}</h2>
-                <div class="row justify-content-between">
-                    <div class="col-8">
-                        {% if post.author %}
-                            <p class="lead">{% trans "by" %} {{ post.author }}</p>
-                        {% endif %}
-                    </div>
-                    <div class="col-4">
-                        <div class="d-flex justify-content-end text-muted"> <span>{{ post.date }}</span></div>
-                    </div>
-                </div>
+            <div class="card-header bg-light">
+                {% include "feed/header.html" %}
             </div>
             <div class="card-body">
                 <p>
