--- a/myhpi/feed/templates/feed/post.html
+++ b/myhpi/feed/templates/feed/post.html
@@ -3,9 +3,7 @@
 {% load i18n %}
 
 {% block content %}
-    <h1>{{ page.title }}</h1>
-    <p class="lead">{% trans "by" %} {{ page.author }}</p>
-    <span>{{ page.date }}</span>
+    {% include "feed/header.html" with post=page %}
     {% with page.body|markdown as parsed_md %}
         {{ parsed_md.0 }}
     {% endwith %}
