--- a/myhpi/core/templates/core/sidebar.html
+++ b/myhpi/core/templates/core/sidebar.html
@@ -7,15 +7,24 @@
         <h1 class="side-panel-warning">{% translate "Page has unpublished changes!" %}</h1>
     </aside>
     {% endif %}
-    <aside class="side-panel border-accent toc-container d-print-none">
-        <h1 class="side-panel-title">{% translate "Visibility" %}</h1>
-        {{ page.visible_for.all|join:", " }}
-    </aside>
+    {% with page.visible_for.all|join:", " as visibility %}
+        {% if visibility %}
+            <aside class="side-panel border-accent toc-container d-print-none">
+                <h1 class="side-panel-title">{% translate "Visibility" %}</h1>
+                {{ visibility }}
+            </aside>
+        {% endif %}
+    {% endwith %}
 {% endif %}
-<aside class="side-panel border-accent toc-container d-print-none">
-    <h1 class="side-panel-title">{% translate "Table of contents" %}</h1>
-    {{ parsed_md.1 }}
-</aside>
+{% with parsed_md.1 as toc %}
+    {% if toc|non_empty %}
+        <aside class="side-panel border-accent toc-container d-print-none">
+            <h1 class="side-panel-title">{% translate "Table of contents" %}</h1>
+            {{ toc }}
+        </aside>
+    {% endif %}
+{% endwith %}
+
 {% if page.attachments.all %}
     <aside class="side-panel border-accent toc-container d-print-none">
         <h1 class="side-panel-title">{% translate "Attachments" %}</h1>
