--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -171,6 +171,12 @@ h1.side-panel-title::after {
     padding: 0;
 }
 
+.toc-container ul li a {
+    display: block;
+    line-height: 100%;
+    padding-bottom: 0.3rem;
+}
+
 .toc-container ul li>ul {
     margin-left: 0.5rem;
 }
@@ -302,19 +308,19 @@ img {
 }
 
 @media (pointer: coarse), (hover: none) {
-      [title] {
-        position: relative;
-        display: inline-flex;
-        justify-content: center;
-      }
-      [title]:focus::after {
-        content: attr(title);
-        position: absolute;
-        top: 90%;
-        color: #000;
-        background-color: #fff;
-        border: 1px solid;
-        width: fit-content;
-        padding: 3px;
-      }
+    [title] {
+      position: relative;
+      display: inline-flex;
+      justify-content: center;
     }
+    [title]:focus::after {
+      content: attr(title);
+      position: absolute;
+      top: 90%;
+      color: #000;
+      background-color: #fff;
+      border: 1px solid;
+      width: fit-content;
+      padding: 3px;
+    }
+}
