fix: use bootstrap instead of scss where possible

--- a/myhpi/search/templates/search/search_result.html
+++ b/myhpi/search/templates/search/search_result.html
@@ -3,8 +3,8 @@
 
 <a href="{% pageurl result %}">
     <div class="search-result">
-        <hgroup>
-            <h5>{{ result.title }}</h5>
+        <hgroup class="d-flex justify-content-between">
+            <h5 class="text-break">{{ result.title }}</h5>
             <time datetime="{{ result.specific.date|date:"c" }}">
                 {{ result.specific.date|date:"SHORT_DATE_FORMAT" }}
             </time>
