--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -81,8 +81,8 @@
         </div>
         <div class="navbar-bottom d-flex">
             <div class="navbar-bottom-content page-content d-flex flex-column flex-xl-row flex-grow-1 flex-xl-grow-0">
-
-                {% cache 500 menu request.user.id request.user.ip_range_group_name LANGUAGE_CODE %}
+            
+                {% cache template_cache_duration menu request.user.id request.user.ip_range_group_name LANGUAGE_CODE %}
                     {% build_nav_level_for root_page %}
                 {% endcache %}
 
