--- a/myhpi/static/scss/myHPI.scss
+++ b/myhpi/static/scss/myHPI.scss
@@ -16,9 +16,11 @@ $custom-colors: (
     "border": #EEE,
     "border-dark": #B2B2B2,
     "body-bg-light": #FBFBFB,
-    "body-bg-overlay": #EEE
+    "body-bg-overlay": #EEE,
 );
 $colors: map-merge($colors, $custom-colors);
+
+$offcanvas-vertical-height: 70vh;
 
 @import "./bootstrap/root";
 
@@ -65,12 +67,19 @@ $colors: map-merge($colors, $custom-colors);
 :root {
     --bs-p-2: 0.5rem;
     --bs-p-4: 1rem;
+    --myhpi-page-padding-top: 1.5rem;
     --myhpi-round-border: 2px;
+    --myhpi-navbar-height: 73px; // Default value, overwritten by JS as necessary
+    --myhpi-navbar-visible-height: 73px; // Default value, overwritten by JS as necessary
 }
 
-h1, h2, h3, h4, h5, h6, .toc a {
+h1, h2, h3, h4, h5, h6, .toc a, .page-content {
     word-break: normal;
     overflow-wrap: break-word;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    scroll-margin-top: calc(5rem + var(--myhpi-navbar-height));
 }
 
 a {
@@ -79,6 +88,10 @@ a {
 
 p {
     text-align: justify;
+}
+
+#page {
+    padding-top: calc(var(--myhpi-page-padding-top) + var(--myhpi-navbar-height));
 }
 
 .page {
@@ -171,19 +184,13 @@ h1.side-panel-title::after {
     font-weight: 600;
 }
 
-.toc-container ul {
+.sidebar-container ul {
     list-style: none;
     padding: 0;
 }
 
-.toc-container ul li a {
-    display: block;
-    line-height: 100%;
-    padding-bottom: 0.3rem;
-}
-
-.toc-container ul li>ul {
-    margin-left: 0.5rem;
+.sidebar-container ul li>ul {
+    margin-left: 1rem;
 }
 
 .toc-permalink {
@@ -271,6 +278,12 @@ img {
 @import "./navbar.scss";
 @import "./footer.scss";
 
+#sidebar-toggle {
+    position: sticky;
+    transition: all 0.3s ease; // Equal to .xl-hide-on-scroll
+    top: calc(1rem + var(--myhpi-navbar-visible-height));
+}
+
 @media screen and (max-width: 1200px) {
     .xl-hide-on-scroll {
         transition: top 0.3s, opacity 0.3s, transform 0.3s ease;
@@ -281,11 +294,40 @@ img {
         opacity: 0;
         transform: translateY(-100%);
     }
+
+    .sidebar-container a {
+        display: block;
+        padding: var(--bs-p-2);
+    }
+
+    .offcanvas {
+        .offcanvas-body {
+            padding-top: 0;
+        }
+
+        .side-panel:first-of-type {
+            border-top: none;
+            padding-top: 0;
+        
+            .side-panel-title {
+                display: none;
+            }
+        }
+
+        .side-panel {
+            padding-left: 0;
+            padding-right: 0;
+        }
+    }
 }
 
 @media screen and (min-width: 1200px) {
     body {
         padding-top: 1rem;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        scroll-margin-top: calc(1.5rem + var(--myhpi-navbar-height));
     }
 
     .page-content {
@@ -298,13 +340,13 @@ img {
     .page:not(.navbar-myhpi) .page-content {
         padding-top: 1.5rem; // default padding without height of navbar
     }
+    
+    .sidebar-container ul li>ul {
+        margin-left: 0.5rem;
+    }
 }
 
 @media print {
-    .toc {
-        display: none;
-    }
-
     .minutes-container {
         display: flex;
         flex-direction: column;
