--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="svg" href="{% static 'img/favicon/favicon.svg' %}" />
 
     {# Global stylesheets #}
-    <link type="text/css" href="{% static "scss/myHPI.scss"|compile %}" rel="stylesheet">
+    <link type="text/css" href="{% static 'scss/myHPI.scss'|compile %}" rel="stylesheet">
 
     {% block extra_css %}
     {# Override this in templates to add extra stylesheets #}
@@ -48,23 +48,19 @@
                 </div>
                 <div id="nav-level-0" class="nav-level"></div>
                 <div id="navbar-right" class="flex-fill justify-content-end d-flex align-items-center">
-                    <a id="nav-search-button" class="nav-link"
-                        onclick="showSearchModal(event)"
-                        data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title={% translate "Ctrl+K" %}
-                        role="button">
+                    <a id="nav-search-button" class="nav-link" onclick="showSearchModal(event)" data-bs-toggle="tooltip"
+                        data-bs-placement="bottom" data-bs-title={% translate "Ctrl+K" %} role="button">
                         {% bs_icon 'search' size='1.4em' %}
                     </a>
                     <a id="nav-mobile-toggle" class="nav-link d-xl-none" href="#nav-item-container-root"
-                        onclick="toggleMobileNavbar(event)"
-                        role="button"
-                        aria-expanded="false" aria-controls="nav-item-container-root">
+                        onclick="toggleMobileNavbar(event)" role="button" aria-expanded="false"
+                        aria-controls="nav-item-container-root">
                         {% bs_icon 'list' size='1.4em' %}
                     </a>
                     {% if user.is_authenticated %}
                     <a id="nav-user-toggle" class="nav-link" href="#nav-item-container-user"
-                        onclick="toggleUserNavbar(event)"
-                        role="button"
-                        aria-expanded="false" aria-controls="nav-item-container-user">
+                        onclick="toggleUserNavbar(event)" role="button" aria-expanded="false"
+                        aria-controls="nav-item-container-user">
                         <span id="user-information-username" class="d-none" aria-hidden="true">{{ user.first_name }}
                             {{ user.last_name }}</span>
                         {% bs_icon 'person-circle' size='1.4em' %}
@@ -83,7 +79,7 @@
             <div class="navbar-bottom-content page-content d-flex flex-column flex-xl-row flex-grow-1 flex-xl-grow-0">
 
                 {% cache template_cache_duration menu request.user.id request.user.ip_range_group_name LANGUAGE_CODE %}
-                    {% build_nav_level_for root_page %}
+                {% build_nav_level_for root_page %}
                 {% endcache %}
 
                 <!-- For navbar desktop mode: Wrappers for sub level containers of root level in navbar -->
@@ -95,8 +91,8 @@
                     <ul id="nav-item-container-user" class="nav-item-container collapse"
                         data-navbar-level="#nav-level-0">
                         {% if user.groups.all.exists %}
-                        <span class="nav-link pe-none"
-                            id="navbar-groups-header"><i>{% translate "Your groups:" %}</i></span>
+                        <span class="nav-link pe-none" id="navbar-groups-header"><i>{% translate "Your groups:"
+                                %}</i></span>
                         {% for group in user.groups.all %}
                         <li class="nav-link nav-link-extra-indent">
                             <div class="row">
@@ -105,10 +101,12 @@
                                 </div>
                                 {% if minutes_creation_links|get_link_for_group:group%}
                                 <div class="col add-minutes">
-                                    <a href="{{ minutes_creation_links|get_link_for_group:group }}" title="{% translate "Create minutes" %}"> {% bs_icon 'journal-plus' size='1.4em' %}</a>
+                                    <a href="{{ minutes_creation_links|get_link_for_group:group }}"
+                                        title="{% translate 'Create minutes' %}"> {% bs_icon 'journal-plus'
+                                        size='1.4em' %}</a>
                                 </div>
                                 {% endif %}
-                        </div>
+                            </div>
                         </li>
                         {% endfor %}
                         <li class="dropdown-divider"></li>
@@ -135,15 +133,15 @@
                 {% for message in messages %}
                 <div class="alert {{ message.tags }} alert-dismissible" role="alert">
                     {{ message }}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="{% translate 'Close'
+                        %}"></button>
                 </div>
                 {% endfor %}
             </div>
 
             {% if self.get_ancestors|length > 1 %}
-            <nav aria-label="breadcrumb"
-                class="d-print-none"
-                style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,{% filter urlencode|slice:" 43:" %}{% bs_icon 'chevron-right' size="8" %}{% endfilter %} &#34;);">
+            <nav aria-label="breadcrumb" class="d-print-none"
+                style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,{% filter urlencode|slice:'43:' %}{% bs_icon 'chevron-right' size='8' %}{% endfilter %} &#34;);">
                 <ol class="breadcrumb">
                     {% for ancestor_page in self.get_ancestors %}
                     {% if ancestor_page.is_root == False %}
@@ -155,6 +153,15 @@
             </nav>
             {% endif %}
 
+            <div id="sidebar-toggle" class="d-grid d-lg-none">
+                <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar-offcanvas"
+                    aria-controls="sidebar-offcanvas" class="btn btn-light mb-3" aria-label="{% translate " Table of
+                    contents" %}">
+                    {% bs_icon 'list-ol' size='1.3rem' %}
+                    {% translate "Table of contents" %}
+                </button>
+            </div>
+
             {% block content %}{% endblock %}
         </div>
     </div>
@@ -163,14 +170,12 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                    <form id="searchForm" class="d-flex align-items-center"
-                        action="{% url 'search' %}">
-                        <input id="searchInput" type="search" class="form-control me-3 "
-                            placeholder={%  translate "Search..." %}
-                            aria-label="Suche" name="query">
-                        <button type="submit" class="btn btn-primary" aria-label={%  translate "Start search" %}
-                            data-bs-toggle="tooltip" data-bs-placement="bottom"
-                            data-bs-title="Enter">{% bs_icon 'search' size='1.4em' extra_classes="text-light" %}</button>
+                    <form id="searchForm" class="d-flex align-items-center" action="{% url 'search' %}">
+                        <input id="searchInput" type="search" class="form-control me-3" placeholder="{%
+                            translate 'Search...' %}" aria-label="Suche" name="query">
+                        <button type="submit" class="btn btn-primary" aria-label="{% translate 'Start search' %}"
+                            data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Enter">{% bs_icon
+                            'search' size='1.4em' extra_classes="text-light" %}</button>
                     </form>
                 </div>
             </div>
@@ -183,6 +188,7 @@
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/utils.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/navbar.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/sidebar.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/search.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/myHPI.js' %}"></script>
 
