--- a/myhpi/templates/base.html
+++ b/myhpi/templates/base.html
@@ -153,7 +153,7 @@
             </nav>
             {% endif %}
 
-            <div id="sidebar-toggle" class="d-grid d-lg-none">
+            <div id="sidebar-toggle" class="d-grid d-lg-none d-print-none">
                 <button type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar-offcanvas"
                     aria-controls="sidebar-offcanvas" class="btn btn-light mb-3" aria-label="{% translate " Table of
                     contents" %}">
