--- a/myhpi/core/templates/core/minutes.html
+++ b/myhpi/core/templates/core/minutes.html
@@ -6,80 +6,83 @@
 {% load bootstrap_icons %}
 
 {% block content %}
-    <div class="row minutes-container">
-        {% with page.body|markdown as parsed_md %}
-        <div class="d-none d-print-block minutes-title">
-            <h1>{{  page.title }}</h1>
-        </div>
-        <div class="col-9 minutes-text">
-            {{ parsed_md.0|touchify_abbreviations|tag_external_links }}
-        </div>
-        <div class="col-3 minutes-meta">
-            <aside class="side-panel border-accent">
-                <h1 class="side-panel-title">{% translate "Date" %}</h1>
-                <p>{{ page.date }}</p>
-            </aside>
-            <aside class="side-panel border-accent">
-                <h1 class="side-panel-title">{% translate "Moderator" %}</h1>
-                <p>{{ page.moderator.get_full_name }}</p>
-            </aside>
-            <aside class="side-panel border-accent">
-                <h1 class="side-panel-title">{% translate "Minutes taker" %}</h1>
-                <p>{{ page.author.get_full_name }}</p>
-            </aside>
-            <aside class="side-panel border-accent">
-                <h1 class="side-panel-title">{% translate "Participants" %}</h1>
-                <ul>
-                    {% for participant in page.participants.all %}
-                        <li>{{ participant.get_full_name }}</li>
-                    {% endfor %}
-                </ul>
-            </aside>
-            <aside class="side-panel border-accent">
-                <h1 class="side-panel-title">{% translate "Guests" %}</h1>
-                {% if page.guests %}
-                    <ul>
-                    {% for guest in page.guests %}
-                        <li>{{ guest }}</li>
-                    {% endfor %}
-                    </ul>
-                {% else %}
-                    <i>{% translate "No guests" %}</i>
-                {% endif %}
-            </aside>
-            {% if page.location %}
-            <aside class="side-panel border-accent">
-              <h1 class="side-panel-title">{% translate "Location" %}</h1>
-              <p>{{ page.location }}</p>
-            </aside>
-            {% endif %}
-            <aside class="side-panel border-accent">
-                <h1 class="side-panel-title">{% translate "Labels" %}</h1>
-                {%  if page.labels.all %}
-                    <p>{% include "core/label.html" with minutes=page %}</p>
-                {% else %}
-                    <i>{% translate "No labels"%}</i>
-                {% endif %}
-            </aside>
-            {% include "core/sidebar.html" %}
-        </div>
-        <div id="minutes-footer" class="d-none d-print-block"></div>
-        <div id="minutes-navigation" class="row d-print-none">
-            <div class="col-4">
-                {%  prev_minutes page as prev %}
-                {% if prev %}
-                    <a href="{{ prev.url }}" class="btn btn-outline-primary minutes-navigation-button">{% bs_icon 'arrow-left' extra_classes='minutes-navigation-icon' %} {% translate "Previous minutes" %}</a>
-                {%  endif %}
-            </div>
-            <div class="col-5 text-end">
-                {%  next_minutes page as next %}
-                {% if next %}
-                    <a href="{{ next.url }}" class="btn btn-outline-primary minutes-navigation-button"> {% translate "Next minutes" %} {% bs_icon 'arrow-right' extra_classes='minutes-navigation-icon' %}</a>
-                {%  endif %}
-            </div>
-        </div>
-        {% endwith %}
+<div class="row minutes-container">
+    {% with page.body|markdown as parsed_md %}
+    <h1 class="page-title">
+        <span class="underline">
+            {{ page.title }}
+        </span>
+    </h1>
+    <div class="col-9 minutes-text">
+        {{ parsed_md.0|touchify_abbreviations|tag_external_links }}
     </div>
+    <div class="col-lg-3 minutes-meta">
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Date" %}</h1>
+            <p>{{ page.date }}</p>
+        </aside>
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Moderator" %}</h1>
+            <p>{{ page.moderator.get_full_name }}</p>
+        </aside>
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Minutes taker" %}</h1>
+            <p>{{ page.author.get_full_name }}</p>
+        </aside>
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Participants" %}</h1>
+            <ul>
+                {% for participant in page.participants.all %}
+                <li>{{ participant.get_full_name }}</li>
+                {% endfor %}
+            </ul>
+        </aside>
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Guests" %}</h1>
+            {% if page.guests %}
+            <ul>
+                {% for guest in page.guests %}
+                <li>{{ guest }}</li>
+                {% endfor %}
+            </ul>
+            {% else %}
+            <i>{% translate "No guests" %}</i>
+            {% endif %}
+        </aside>
+        {% if page.location %}
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Location" %}</h1>
+            <p>{{ page.location }}</p>
+        </aside>
+        {% endif %}
+        <aside class="side-panel border-accent">
+            <h1 class="side-panel-title">{% translate "Labels" %}</h1>
+            {% if page.labels.all %}
+            <p>{% include "core/label.html" with minutes=page %}</p>
+            {% else %}
+            <i>{% translate "No labels"%}</i>
+            {% endif %}
+        </aside>
+        {% include "core/sidebar.html" %}
+    </div>
+    <div id="minutes-footer" class="d-none d-print-block"></div>
+    <div id="minutes-navigation" class="row d-print-none">
+        <div class="col-4">
+            {% prev_minutes page as prev %}
+            {% if prev %}
+            <a href="{{ prev.url }}" class="btn btn-outline-primary minutes-navigation-button">{% bs_icon 'arrow-left'
+                extra_classes='minutes-navigation-icon' %} {% translate "Previous minutes" %}</a>
+            {% endif %}
+        </div>
+        <div class="col-5 text-end">
+            {% next_minutes page as next %}
+            {% if next %}
+            <a href="{{ next.url }}" class="btn btn-outline-primary minutes-navigation-button"> {% translate "Next minutes" %} {% bs_icon 'arrow-right' extra_classes='minutes-navigation-icon' %}</a>
+            {% endif %}
+        </div>
+    </div>
+    {% endwith %}
+</div>
 {% endblock %}
 
 {% block extra_js %}
